<resources>
    <string name="app_name">Museek</string>
    <string name="logo">Museek</string>
    <string name="connectButton">Connect to Spotify</string>
    <string name="quitButton">Quit the app</string>
    <string name="credits">Developed by \n@Vincent COURSAC and Paul TORTEL</string>
    <string name="info">Connect to Spotify and\ndiscover new musics</string>
    <string name="settings">Settings</string>
    <string name="show_likes">Display Liked Songs</string>
    <string name="release">New realeases only</string>
    <string name="release_details">Discover music from the new releases</string>
    <string name="genre">Suggestions only</string>
    <string name="genre_details">Discover music according to your music taste</string>
    <string name="settings_title">Music selection settings</string>

    <string name="genre_title">Genres</string>
    <string name="genre_title_details">All genres available</string>
    <string name="genre_hard">Hard-rock</string>
    <string name="genre_pop">Pop</string>
    <string name="genre_hiphop">Hip-hop</string>
    <string name="genre_electro">Electro</string>
    <string name="genre_classic">Classic</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
