<?xml version="1.0" encoding="utf-8"?>
<android.widget.RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@mipmap/background_menu"
    tools:context="spark.museek.MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/logo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="39dp"
            android:text="@string/logo"
            android:textAlignment="center"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            android:textColor="@android:color/background_light"
            android:textSize="30sp"
            android:textStyle="bold" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/info"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="13dp"
                android:text="@string/info"
                android:textAlignment="center"
                android:textColor="@android:color/background_light"
                android:textSize="18sp" />

            <Button
                android:id="@+id/connectButton"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="250dp"
                android:layout_height="50dp"
                android:layout_alignStart="@+id/credits"
                android:layout_centerVertical="true"
                android:background="#1DB954"
                android:onClick="connectUser"
                android:text="@string/connectButton"
                android:textColor="@android:color/background_light"
                android:textSize="18sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/quitButton"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:layout_below="@+id/connectButton"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="22dp"
                android:onClick="quitApp"
                android:text="@string/quitButton"
                android:textColor="@android:color/background_light"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/credits"
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_centerHorizontal="true"
                android:layout_marginBottom="22dp"
                android:lines="2"
                android:maxLines="2"
                android:text="@string/credits"
                android:textAlignment="center"
                android:textColor="@android:color/background_light" />

            <ProgressBar
                android:id="@+id/progressBar"
                style="?android:attr/progressBarStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/info"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="50dp"
                android:visibility="invisible" />

        </RelativeLayout>
    </LinearLayout>

</android.widget.RelativeLayout>
